--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-family: Alice, serif;
+  line-height: 150%;
+}
+
 body {
-  font-family: Alice, sans-serif;
   background: url(/assets/bg-image.jpg);
   background-size: cover;
 }
@@ -20,7 +29,7 @@ body {
   background-color: #f0e8c2;
   padding: 24px;
   width: 800px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
   border-radius: 24px;
   box-sizing: border-box;
 }
@@ -30,6 +39,46 @@ body {
   width: 100%;
 }
 
+main {
+  margin-top: 24px;
+  padding: 0 24px 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
+
+h1 {
+  font-size: 40px;
+  line-height: 140%;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 150%;
+
+  font-weight: normal;
+}
+
+h1,
+h2 {
+  margin-bottom: 4px;
+}
+
+section + section {
+  margin-top: 24px;
+}
+
+ul {
+  padding-left: 25px;
+}
+
 .credit {
   text-align: center;
+  margin-bottom: 48px;
+}
+
+.credit img {
+  vertical-align: middle;
 }
